--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,12 @@ ol, ul {
 	list-style: none;
   padding: 0;
 }
+
+.link {
+  background-color: white;
+  border: 1px solid white;
+  color: #252931;
+  text-decoration: none;
+  padding: 8px;
+  border-radius: 15px;
+}
